--- a/_layouts/alejandro.html
+++ b/_layouts/alejandro.html
@@ -6,7 +6,6 @@ layout: default
 <html>
 <head>
 <title>Iori11</title>
-<!<link href="css/reset.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/typography.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/main.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
@@ -30,20 +29,20 @@ img {border: none;}
 <div id="mainwrap">																																																																																																																																																																																																																																																																																																																				
 	<div id="pagetop"><div id="pagetop-inner">
     	<div id="header" class="clearfix">
-        	<h1 id="logo"><a href="http://softwarelibre.github.io">Software Libre</a></h1>
-            <a href="?" id="but-green"><span>Documentos</span></a>
+        	<h1 id="logo"><a href="http://softwarelibre.github.io">Curso de Software Libre</a></h1>
+            <a href="https://github.com/iori11" id="but-green"><span>Proyectos (Por editar)</span></a>
         </div>
         <div id="mainnav" class="vernav clearfix">
         	<ul class="clearfix">
-                <li><a href="?"><span>Servicios</span></a></li>
-                <li><a href="?"><span>Contribuciones</span></a></li>
+                <li><a href="?"><span>Contribuciones (por agregar)</span></a></li>
+                <li><a href="http://tangoingeculturas.blogspot.com" target="_blank"><span>Otras actividades</span></a></li>
             </ul>
         </div>
         <div id="content">
         	<div id="content-inner">
-                <h2 id="label">Ingeniero de Sistemas y computacion</h2>
+                <h2 id="label">Ingeniero de Sistemas y Computacion</h2>
                 <p style="margin-bottom: 40px;"><strong></strong></p>
-                <p></p>
+                <p>Radicado en la ciudad de bogota, uso mi tiempo libre en el aprendizaje de herramientas informaticas, aficionado de la seguridad informatica.</p>
                 </div>
         	<div class="clearfix">
                 <a href="?" class="but-grey"><span></span></a>
@@ -53,11 +52,11 @@ img {border: none;}
         
     </div></div>
     <div id="pagebot" class="clearfix">
-    	<h2><img src="images/bullet1.gif" alt="" style="margin-bottom: -1px" /></h2>
+    	<h2><img src="images/" alt="" style="margin-bottom: -1px" /></h2>
         <div id="box-wrap" class="clearfix">
         	<div class="box">
             	
-                <p><a href="?" class="title">Ingeniero de Sistemas y Computacion Universidad Nacional de Colombia</a></p>
+                <p><a href="?" class="title"></a></p>
                 <img src="/images/hacker.jpg" class="img" alt="" />
                 <p>Conocimientos de programacion en Java, python y php. </p>
             </div>
